# cookicutter-src-pypackage

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: requirements-dev.txt  setup.cfg  tox.ini
