[metadata]
name = {{ cookiecutter.project_slug }}
version = {{ cookiecutter.version }}
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}
description = "{{ cookiecutter.project_short_description }}"
long_description = file: README.metadata
long_description_content_type = text/markdown
author = "{{ cookiecutter.full_name }}"
author_email = '{{ cookiecutter.email }}'
license_file = LICENSE
classifiers =
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.6.1

[flake8]
max-line-length = 88

[options.packages.find]
where = src

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-tests.*]
disallow_untyped_defs = false
